Ensure that the Web Content process doesn't sleep during initialization https://bugs.webkit.org/show_bug.cgi?id=185975 <rdar://problem/40548159>

Reviewed by Geoffrey Garen.

WebProcessPool::warmInitialProcess isn't worth much (or at least, as much
as it could be) if the Web Content process goes to sleep in the middle
of initializeWebProcess.

Keep the Web Content process alive until it has handled all messages
sent from WebProcessPool::initializeNewWebProcess.

This is a significant speedup on some benchmarks I've been running
that involve prewarming a process long before any content is loaded.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::initializeNewWebProcess):


Canonical link: https://commits.webkit.org/201434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232209 268f45cc-cd09-0410-ab3c-d52691b4dbfc